# evt2kafka

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: release.yml
src/: etw.rs  main.rs
