[package]
name = "evt2kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quickxml_to_serde = "0.5.0"
rdkafka = { version = "0.28.0" , features = ["cmake-build"] }
rdkafka-sys = { version = "4.2.0", default-features = false, features = ["cmake-build"] }
tokio = { version = "1.0", features = ["full"] }

[dependencies.windows]
version = "0.36.1"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_System_EventLog",
    "Win32_UI_WindowsAndMessaging",
    "Data_Xml_Dom"
]

